fixed spacing

--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ body {
 	background-color: #082a78;
 	width: 100%;
 	padding-top: 10;
+	padding-bottom: 5;
 	float: left;
 }
 
